Cleaner code